# restart_bluetooth

./: .gitignore  README.md  RestartBlueTooth.platypus  pyproject.toml  restart.py
scripts/: link_poetry_venv.py
